fix(locale-uk): fix spelling errors

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -17,8 +17,8 @@
 "password" = "Пароль";
 "registration" = "Реєстрація";
 "forgot_password" = "Забули пароль?";
-"checkbox_in_registration" = "Я згоден з <a href='/privacy'>політикою конфіденційності</a> й <a href='/terms'>правилами сайту</a>";
-"checkbox_in_registration_unchecked" = "Ви маєте погодитися з політикою конфіденційності й правилами, щоб зареєструватися.";
+"checkbox_in_registration" = "Я згоден з <a href='/privacy'>політикою конфіденційності</a> та <a href='/terms'>правилами сайту</a>";
+"checkbox_in_registration_unchecked" = "Ви маєте погодитися з політикою конфіденційності та правилами, щоб зареєструватися.";
 "login_failed" = "Не вдалося увійти";
 "invalid_username_or_password" = "Неправильний e-mail або пароль. <a href='/restore'>Забули пароль?</a>";
 "failed_to_register" = "Не вдалося зареєструватися";
@@ -40,7 +40,7 @@
 "email_error" = "Непередбачена помилка під час надсилання листа.";
 "password_reset_rate_limit_error" = "Не можна робити цю дію так часто, вибачте.";
 "email_verify_success" = "Ваш e-mail був підтверджений. Приємного проведення часу!";
-"registration_disabled_info" = "Реєстрація вимкнена системним адміністратором. При можливості попросіть запрошення у Вашого знайомого, якщо він зареєстрований на цьому сайті.";
+"registration_disabled_info" = "Реєстрація вимкнена системним адміністратором. За можливості попросіть запрошення у Вашого знайомого, якщо він зареєстрований на цьому сайті.";
 "registration_closed" = "Реєстрація відключена.";
 "invites_you_to" = "<b>$1</b> запрошує вас до $2";
 "register_meta_desc" = "Зареєструйтеся у $1 прямо зараз!";
@@ -673,7 +673,7 @@
 "ui_settings_rating_show" = "Показувати";
 "ui_settings_rating_hide" = "Приховувати";
 "ui_settings_nsfw_content" = "NSFW-контент";
-"ui_settings_nsfw_content_dont_show" = "Не показувати у глобальній стрічці";
+"ui_settings_nsfw_content_dont_show" = "Не показувати в глобальній стрічці";
 "ui_settings_nsfw_content_blur" = "Тільки розмазувати";
 "ui_settings_nsfw_content_show" = "Показувати";
 "ui_settings_view_of_posts" = "Вигляд дописів";
@@ -744,8 +744,8 @@
 "two_factor_authentication_disabled_message" = "Двофакторна автентифікація вимкнена";
 "view_backup_codes" = "Переглянути резервні коди";
 "backup_codes" = "Резервні коди для підтвердження входу";
-"two_factor_authentication_backup_codes_1" = "Резервні коди дозволяють підтверджувати вхід, коли у вас немає доступу до телефону, наприклад, у подорожі.";
-"two_factor_authentication_backup_codes_2" = "У вас є ще <b>10 кодів</b>, кожним кодом можна скористатися тільки один раз. Надрукуйте їх, приберіть в надійне місце і використовуйте, коли будуть потрібні коди для підтвердження входу.";
+"two_factor_authentication_backup_codes_1" = "Резервні коди дають змогу підтвердити вхід, за відсутності доступа до 2FA застосунка.";
+"two_factor_authentication_backup_codes_2" = "Ви маєте <b>10 кодів</b>, кожним кодом можна скористатися тільки один раз. Надрукуйте їх, приберіть у надійне місце і використовуйте, коли будуть потрібні коди для підтвердження входу.";
 "two_factor_authentication_backup_codes_3" = "Ви можете отримати нові коди, якщо вони закінчуються. Дійсні тільки останні створені резервні коди.";
 "viewing_backup_codes" = "Перегляд резервних кодів";
 "disable_2fa" = "Вимкнути 2FA";
@@ -763,8 +763,8 @@
 /* Sorting */
 
 "sort_randomly" = "Сортувати випадково";
-"sort_up" = "Сортувати по даті створення вверх";
-"sort_down" = "Сортувати по даті створення вниз";
+"sort_up" = "Сортувати за датою створення вверх";
+"sort_down" = "Сортувати за датою створення вниз";
 
 /* Videos */
 
@@ -785,7 +785,7 @@
 "videos_other" = "$1 відеозаписа";
 "view_video" = "Перегляд";
 "change_video" = "Редагувати відеозапис";
-"unknown_video" = "Цей відеозапис не підтримується у цій версії OpenVK.";
+"unknown_video" = "Цей відеозапис не підтримується в цій версії OpenVK.";
 "selecting_video" = "Вибір відеозаписів";
 "upload_new_video" = "Завантажити нове відео";
 "max_attached_videos" = "Максимум 10 відеозаписів";
@@ -803,7 +803,7 @@
 "audio" = "Аудіо";
 "playlist" = "Список відтворення";
 "upload_audio" = "Завантажити аудіо";
-"upload_audio_to_group" = "Завантажити аудіо у спільноту";
+"upload_audio_to_group" = "Завантажити аудіо в спільноту";
 
 "performer" = "Виконавець";
 "audio_name" = "Назва";
@@ -816,7 +816,7 @@
 "select_audio" = "Оберіть аудіо з Вашого пристрою";
 "audio_requirements" = "Аудіо має тривати від $1 секунди до $2 хвилин, мати розмір до $3 МБ та мати аудіопотік.";
 "audio_requirements_2" = "Аудіо не має порушувати авторські права";
-"you_can_also_add_audio_using" = "Ви також можете додати аудіо з числа вже завантажених файлів за допомогою";
+"you_can_also_add_audio_using" = "Ви також можете додати аудіо із переліку завантажених файлів за допомогою";
 "search_audio_inst" = "пошуку аудіо";
 
 "audio_embed_not_found" = "Аудіозапис не знайдено";
@@ -898,7 +898,7 @@
 
 "add_audio_to_club" = "Додати аудіо до спільноти";
 "add_audio" = "Додавання аудіо";
-"add_audio_limitations" = "Можна обрати до 10 спільнот/плейлистів.";
+"add_audio_limitations" = "Можна обрати до 10 спільнот/списків відтворення.";
 "to_club" = "В спільноту";
 "to_playlist" = "В список відтворення";
 "audio_was_successfully_added" = "Аудіозапис було додано.";
@@ -986,7 +986,7 @@
 "voucher_explanation" = "Введіть серійний номер ваучера. Зазвичай він вказується в чеку або в повідомленні.";
 "voucher_explanation_ex" = "Зверніть увагу, що термін дії ваучерів може закінчитися і ви можете використовувати їх тільки один раз.";
 "invalid_voucher" = "Ваучер недійсний";
-"voucher_bad" = "Можливо, ви ввели неправильний серійний номер, вже використовували цей ваучер або ж він просто закінчився.";
+"voucher_bad" = "Можливо, Ви ввели неправильно серійний номер, використовували цей ваучер або ж він просто закінчився.";
 "voucher_good" = "Ваучер активовано";
 "voucher_redeemed" = "Ваучер успішно активовано. Вам будуть нараховані голоси, але цим кодом ви більше не зможете активувати його.";
 "redeem" = "Активувати ваучер";
@@ -1099,7 +1099,7 @@
 "appjs_act_messages_desc" = "читати та писати від Вашого імені повідомлення";
 "appjs_act_groups" = "Вашим спільнотам";
 "appjs_act_groups_desc" = "дивитися список Ваших спільнот та підписувати вас на інші";
-"appjs_act_likes" = "функціоналу Лайків";
+"appjs_act_likes" = "функціоналу вподобань";
 "appjs_act_likes_desc" = "ставити та прибирати позначки \"мені подобається\" із записів";
 "appjs_act_request" = "Запит доступу";
 "appjs_act_requests" = "запитує доступ до";
@@ -1290,7 +1290,7 @@
 /* Errors */
 
 "error_1" = "Неправильний запит";
-"error_2" = "Невірний логін або пароль";
+"error_2" = "Неправильна пошта або пароль";
 "error_3" = "Не автентифікований";
 "error_4" = "Користувач не існує";
 "information_-1" = "Операція успішно завершена";
@@ -1376,7 +1376,7 @@
 
 "invalid_club" = "Ця спільнота не існує.";
 "invalid_user" = "Цього користувача не існує.";
-"ignored_sources_limit" = "Досягнуто ліміт ігнорованих джерел.";
+"ignored_sources_limit" = "Перевищено ліміт ігнорованих джерел.";
 
 "invalid_audio" = "Пошкоджене аудіо.";
 "do_not_have_audio" = "У вас немає цього аудіо";
@@ -1385,7 +1385,7 @@
 "set_playlist_name" = "Введіть назву списка відвторення.";
 "playlist_already_bookmarked" = "Цей список відтворення вже є у Вашій збірці.";
 "playlist_not_bookmarked" = "Цього списку відтворення немає у Вашій збірці.";
-"invalid_cover_photo" = "Помилка при завантаженні фото обкладинки.";
+"invalid_cover_photo" = "Помилка під час завантаження фото обкладинки.";
 "not_a_photo" = "Завантажений файл не схожий на фотографію.";
 "file_too_big" = "Файл занадто великий.";
 "file_loaded_partially" = "Файл завантажено частково.";
@@ -1471,8 +1471,8 @@
 "last_actions" = "Останні дії";
 "unban_user_action" = "Розблокувати користувача";
 "warn_user_action" = "Попередити користувача";
-"ban_in_support_user_action" = "Заблокувати у технічній підтримці";
-"unban_in_support_user_action" = "Розблокувати у технічній підтримці";
+"ban_in_support_user_action" = "Заблокувати в технічній підтримці";
+"unban_in_support_user_action" = "Розблокувати в технічній підтримці";
 "changes_history" = "Історія редагування";
 
 /* Admin panel */
@@ -1512,7 +1512,7 @@
 "admin_user_online_incognito" = "Інкогніто";
 "admin_user_online_deceased" = "Небіжчик";
 "admin_club_search" = "Пошук спільнот";
-"admin_club_excludeglobalfeed" = "Не показувати записи у глобальній стрічці";
+"admin_club_excludeglobalfeed" = "Не показувати записи в глобальній стрічці";
 "admin_club_enforceexcludeglobalfeed" = "Заборонити керівництву спільноти змінювати відображення в глобальній стрічці";
 "admin_services" = "Платні послуги";
 "admin_newgift" = "Новий подарунок";
@@ -1619,7 +1619,7 @@
 "about_online_users_many" = "<b>$1</b> користувачів у мережі";
 "about_online_users_other" = "<b>$1</b> користувачів у мережі";
 "about_active_users_one" = "<b>1</b> активний користувач";
-"about_active_users_few" = "<b>$1</b> активних користувача";
+"about_active_users_few" = "<b>$1</b> активних користувачів";
 "about_active_users_many" = "<b>$1</b> активних користувачів";
 "about_active_users_other" = "<b>$1</b> активних користувачів";
 "about_groups_one" = "<b>1</b> спільнота";
@@ -1651,8 +1651,8 @@
 
 /* User alerts */
 
-"user_alert_scam" = "На цей акаунт багато скаржилися у зв'язку з шахрайством. Будь ласка, будьте обережні, особливо якщо у вас попросять грошей.";
-"user_may_not_reply" = "Цей користувач, ймовірно, не зможе відповісти Вам через Ваші налаштування приватності. <a href='/settings?act=privacy'>Відкрити налаштування приватності</a>";
+"user_alert_scam" = "На цей акаунт багато скаржилися у зв'язку з шахрайством. Будьте обережні, якщо у Вас попросять особисті дані чи гроші.";
+"user_may_not_reply" = "Цей користувач, не зможе відповісти Вам через Ваші налаштування приватності. <a href='/settings?act=privacy'>Відкрити налаштування приватності</a>";
 
 /* Cookies pop-up */
 
@@ -1666,7 +1666,7 @@
 "url_is_banned" = "Перехід неможливий";
 "url_is_banned_comment" = "Адміністрація <b>$1</b> не рекомендує переходити за цим посиланням.";
 "url_is_banned_comment_r" = "Адміністрація <b>$1</b> не рекомендує переходити за цим посиланням.<br><br>Підстава: <b>$2</b>";
-"url_is_banned_default_reason" = "Посилання, за яким Ви спробували перейти, може вести на сайт, що був створений з метою обману користувачів і отримання шляхом цього неправомірного прибутку.";
+"url_is_banned_default_reason" = "Посилання, за яким Ви спробували перейти, може вести на сайт, що був створений із метою обману користувачів і отримання шляхом цього неправомірного прибутку.";
 "url_is_banned_title" = "Посилання на підозрілий сайт";
 "url_is_banned_proceed" = "Перейти за посиланням";
 
@@ -1712,7 +1712,7 @@
 "poll_locked" = "Заборонити скасовувати свій голос";
 "poll_edit_expires" = "Опитування закінчується через: ";
 "poll_edit_expires_days" = "днів";
-"poll_editor_tips" = "Натискання Backspace у пустому варіанті приведе до його видалення. Tab/Enter у останньому додає новий.";
+"poll_editor_tips" = "Натискання Backspace в пустому варіанті приведе до його видалення. Tab/Enter у останньому додає новий.";
 "poll_embed" = "Отримати код";
 "poll_voter_count_zero" = "Станьте <b>першим</b>, хто проголосує!";
 "poll_voter_count_one" = "В опитуванні проголосувала <b>одна</b> людина.";
@@ -1793,7 +1793,7 @@
 "tour_section_2_title_3" = "Персональна адреса сторінки";
 "tour_section_2_text_3_1" = "Після реєстрації сторінки, Вам видається персональний ID типа: <b>/id12345</b>";
 "tour_section_2_text_3_2" = "<b>Стандартний ID</b>, який був отриманий після реєстрації, <b>змінити не можна!</b>";
-"tour_section_2_text_3_3" = "Однак, в налаштуваннях своєї сторінки ви зможете прив'язати свою персональну адресу і цю адресу <b>можна буде змінити</b> в будь-який час";
+"tour_section_2_text_3_3" = "Однак, у налаштуваннях своєї сторінки Ви зможете прив'язати свою персональну адресу й цю адресу <b>можна буде змінити</b> в будь-який час";
 "tour_section_2_text_3_4" = "<b>Порада:</b> Можна займати будь-яку вільну адресу, довжина якої не менша за 5 символів.";
 "tour_section_2_bottom_text_2" = "<i>Коротка адреса може складатися лише з латинських маленьких літер (a-z), цифр, крапок та нижніх підкреслень (але </i><b>не</b><i> напочатку чи кінці)</i>";
 "tour_section_2_title_4" = "Стіна";
@@ -1802,24 +1802,32 @@
 "tour_section_3_text_1" = "Розділ &quot;Фотографії&quot; доступний у Вашому профілі одразу з моменту реєстрації.";
 "tour_section_3_text_2" = "Ви можете переглядати фотоальбоми користувачів та створювати свої власні фотоальбоми.";
 "tour_section_3_text_3" = "Доступ до всіх Ваших фотоальбомів для інших користувачів редагується в налаштуваннях приватності.";
-"tour_section_3_bottom_text_1" = "Ви можете створювати необмежену кількість фотоальбомів з Ваших подорожей або будь-яких подій, або просто зберігати фото кошенят";
+"tour_section_3_bottom_text_1" = "Ви можете створювати необмежену кількість фотоальбомів із Ваших подорожей або будь-яких подій, або просто зберігати фото кошенят";
 
 "tour_section_4_title_1" = "Пошук";
 "tour_section_4_text_1" = "Розділ &quot;Пошук&quot; має на меті шукати користувачів та групи.";
 "tour_section_4_text_2" = "Цей розділ сайту з часом буде покращуватися та збільшуватися.";
 "tour_section_4_text_3" = "Для початку пошуку, треба знати ім'я (чи прізвище); а якщо шукаєте групу, то потрібно знати її назву.";
 "tour_section_4_title_2" = "Швидкий пошук";
-"tour_section_4_text_4" = "Якщо Ви бажаєте будь-яким чином зберегти власний час, то поле пошуку доступна і в шапці сайту";
+"tour_section_4_text_4" = "Якщо Ви бажаєте будь-яким чином зберегти власний час, то поле пошуку доступна у шапці сайту";
 
 "tour_section_5_title_1" = "Завантажуйте та діліться відео зі своїми друзями!";
 "tour_section_5_text_1" = "Ви можете завантажувати необмежену кількість відеозаписів і кліпів";
 "tour_section_5_text_2" = "Розділ &quot;Відеозаписи&quot; регулюється налаштуваннями приватності";
 "tour_section_5_bottom_text_1" = "Відео можна завантажувати, обходячи розділ &quot;Відеозаписи&quot; через звичайне прикріплення до нового допису на стіні:";
 "tour_section_5_title_2" = "Імпорт відео з YouTube";
-"tour_section_5_text_3" = "Окрім завантаження відео напряму, сайт підтримує і вбудовані відео через YouTube";
+"tour_section_5_text_3" = "Окрім завантаження відео, сайт підтримує інтегровані відео YouTube";
 
-"tour_section_6_title_1" = "Аудіозаписи";
-"tour_section_6_text_1" = "Аудіозаписи в розробці, стежте за новинами";
+"tour_section_6_title_1" = "Прослуховування аудіозаписів";
+"tour_section_6_text_1" = "Ви можете слухати аудіозаписи в розділі \"Мої Аудіозаписи\"";
+"tour_section_6_text_2" = "Цей розділ також регулюється налаштуваннями приватності";
+"tour_section_6_text_3" = "Найбільш прослуховувані пісні знаходяться у вкладці \"Популярне\", а нещодавно завантажені - у вкладці \"Нове\"";
+"tour_section_6_text_4" = "Щоб додати пісню до своєї колекції, наведіть на неї та натисніть на плюс. Знайти потрібну пісню можна в пошуку";
+"tour_section_6_text_5" = "Якщо Ви не можете знайти потрібну пісню, ви можете завантажити її самостійно";
+"tour_section_6_bottom_text_1" = "<b>Важливо:</b> аудіозапис не має порушувати авторські права";
+"tour_section_6_title_2" = "Створюйте списки відтворення";
+"tour_section_6_text_6" = "Ви можете створювати збірки аудіозаписів у вкладці \"Мої списки відтворення\"";
+"tour_section_6_text_7" = "Можна також додавати чужі списки відтворення у свою колекцію";
 
 "tour_section_7_title_1" = "Слідкуйте за тим, що пишуть Ваші друзі";
 "tour_section_7_text_1" = "Розділ &quot;Мої Новини&quot; поділяється на два типи: локальна стрічка та глобальна стрічка новин";
@@ -1850,7 +1858,7 @@
 "tour_section_11_text_1" = "Після реєстрації, як стандартна тема, у вас буде класична тема оформлення";
 "tour_section_11_text_2" = "Деяких нових користувачів може налякати чинна класична тема, яка виглядає дуже архаїчно";
 "tour_section_11_text_3" = "<b>Але не біда:</b> Ви можете обрати іншу тему з каталогу, або створити свою, ознайомившись з <a href='https://docs.ovk.to/'>документацією</a>";
-"tour_section_11_bottom_text_1" = "Каталог тем доступний в розділі &quot;Мої Налаштування&quot; в вкладці &quot;Інтерфейс&quot; ";
+"tour_section_11_bottom_text_1" = "Каталог тем доступний у розділі &quot;Мої Налаштування&quot; у вкладці &quot;Інтерфейс&quot; ";
 "tour_section_11_wordart" = "<img src='/assets/packages/static/openvk/img/tour/wordart.png' width='65%'>";
 
 "tour_section_12_title_1" = "Фон профілю та групи";
@@ -1907,14 +1915,14 @@
 "s_videos" = "Відео";
 "s_audios" = "Музика";
 "s_audios_playlists" = "Списки відтворення";
-"s_by_people" = "по користувачах";
-"s_by_groups" = "по спільнотах";
-"s_by_posts" = "по дописах";
-"s_by_comments" = "по коментарях";
-"s_by_videos" = "по відео";
-"s_by_apps" = "по застосунках";
-"s_by_audios" = "по музиці";
-"s_by_audios_playlists" = "по списках відтворення";
+"s_by_people" = "за користувачами";
+"s_by_groups" = "за спільнотами";
+"s_by_posts" = "за дописах";
+"s_by_comments" = "за коментарями";
+"s_by_videos" = "за відео";
+"s_by_apps" = "за застосунках";
+"s_by_audios" = "за аудіозаписами";
+"s_by_audios_playlists" = "за списках відтворення";
 
 "s_order_by" = "Сортувати за...";
 
@@ -1928,7 +1936,7 @@
 "s_order_by_reg_date" = "За датою реєстрації";
 "s_order_by_creation_date" = "За датою створення";
 "s_order_by_publishing_date" = "За датою публікації";
-"s_order_by_upload_date" = "По даті завантаження";
+"s_order_by_upload_date" = "За датою завантаження";
 
 "s_by_date" = "За датою";
 "s_registered_before" = "Зареєстровано до";
@@ -1947,7 +1955,7 @@
 "s_any_single" = "будь-який";
 "reset" = "Очистити";
 
-"closed_group_post" = "Допис з приватної стіни";
+"closed_group_post" = "Допис із приватної стіни";
 "deleted_target_comment" = "Цей коментар належить до видаленого допису";
 
 "no_results" = "Немає результатів";
@@ -1963,22 +1971,22 @@
 /* BadBrowser */
 
 "deprecated_browser" = "Застарілий браузер";
-"deprecated_browser_description" = "Для перегляду цього контенту Вам необхідний браузер, новіший за Firefox ESR 52 або новіший еквівалентний по функціоналу веббраузер для перегляду всесвітньої мережі Інтернет.";
+"deprecated_browser_description" = "Для перегляду цього контенту Вам необхідний браузер, новіший за Firefox ESR 52 або новіший еквівалентний веббраузер для перегляду всесвітньої мережі Інтернет.";
 
 /* Statistics */
 
-"coverage" = "Обхват";
-"coverage_this_week" = "Цей графік відображає обхват за останні 7 днів.";
+"coverage" = "Охоплення";
+"coverage_this_week" = "Цей графік відображає охоплення за останні 7 днів.";
 "views" = "Перегляди";
-"views_this_week" = "Цей графік відображає перегляди дописів спільноти за остані 7 днів.";
+"views_this_week" = "Цей графік відображає перегляди дописів спільноти за останні 7 днів.";
 
-"full_coverage" = "Повний обхват";
+"full_coverage" = "Повне охопленння";
 "all_views" = "Усі перегляди";
 
-"subs_coverage" = "обхват підписників";
+"subs_coverage" = "охоплення підписників";
 "subs_views" = "Перегляди підписників";
 
-"viral_coverage" = "Віральний обхват";
+"viral_coverage" = "Віральне охоплення";
 "viral_views" = "Віральні перегляди";
 
 /* Sudo */
@@ -2061,15 +2069,15 @@
 "time_after" = "Годиною пізніше, ніж";
 "where_for_search" = "WHERE для пошуку по розділу";
 "block_params" = "Параметри блокувань";
-"only_rollback" = "Тільки відкат";
+"only_rollback" = "Тільки скасування";
 "only_block" = "Тільки блокування";
-"rollback_and_block" = "Відкат та блокування";
+"rollback_and_block" = "Скасування та блокування";
 "subm" = "Застосувати";
 
 "select_section_for_start" = "Для початку роботи, оберіть розділ";
 "results_will_be_there" = "Тут будуть відображатися результати пошуку";
 "search_results" = "Результати пошуку";
-"cnt" = "шт.";
+"cnt" = "штук";
 
 "link_to_page" = "Посилання на сторінку";
 "or_subnet" = "або підмережа";
