--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -686,7 +686,7 @@
 "email_change_confirm_message" = "Щоб зміни набули чинності, підтвердьте Вашу нову адресу електронної пошти. Ми надіслали інструкцію в поштову скриньку.";
 "profile_deactivate" = "Видалення сторінки";
 "profile_deactivate_button" = "Видалити сторінку";
-"profile_deactivate_header" = "Ми шкодуємо, що Ви бажаєте видалити свою сторінку. За бажання, можна вказати причину видалення та Ваше повідомлення із цього приводу. Ми читаємо Ваші відгуки та намагаємося зробити сайт кращим!";
+"profile_deactivate_header" = "Ми шкодуємо, що Ви бажаєте видалити свою сторінку. За бажанням, можна вказати причину видалення та Ваше повідомлення із цього приводу. Ми читаємо Ваші відгуки та намагаємося зробити сайт кращим!";
 "profile_deactivate_reason_header" = "Будь ласка, вкажіть причину видалення Вашої сторінки";
 "profile_deactivate_reason_1" = "У мене є інший обліковий запис на сайті";
 "profile_deactivate_reason_1_text" = "Я створив нову сторінку, і тепер хочу стерти своє минуле.";
