--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -837,7 +837,7 @@
 "genre" = "Жанр";
 "lyrics" = "Текст";
 
-"select_another_file" = "Выбрать другой файл";
+"select_another_file" = "Загрузить ещё";
 
 "limits" = "Ограничения";
 "select_audio" = "Выберите аудиозапись на Вашем компьютере";
