--- a/locales/en.strings
+++ b/locales/en.strings
@@ -949,12 +949,11 @@
 "add_to_playlist" = "Add to playlist";
 "remove_from_playlist" = "Remove from playlist";
 "delete_playlist" = "Delete playlist";
-"playlist_cover" = "Playlist cover";
 
 "playlists_user" = "User's playlists";
 "playlists_club" = "Group's playlists";
 "change_cover" = "Change cover";
-"playlist_cover" = "Playlist's cover";
+"playlist_cover" = "Playlist cover";
 
 "minutes_count_zero" = "Lasts no minutes";
 "minutes_count_one" = "Lasts one minute";
@@ -1004,6 +1003,7 @@
 "audio_ctx_add_to_group" = "Add to group";
 "audio_ctx_add_to_playlist" = "Add to playlist";
 "audio_ctx_play_next" = "Play next";
+"audio_ctx_clear_context" = "Clear tracks list";
 
 /* Notifications */
 
@@ -1603,6 +1603,7 @@
 "error_adding_source_regex" = "Error adding source: incorrect link.";
 "error_adding_source_long" = "Error adding source: link is too long.";
 "error_adding_source_sus" = "Error adding source: suspicious link.";
+"error_playlist_creating_too_small" = "Add at least one audio";
 
 /* Admin actions */
 
