--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -908,7 +908,7 @@
 "playlists_user" = "Плейлисты пользователя";
 "playlists_club" = "Плейлисты группы";
 "change_cover" = "Сменить обложку";
-"playlist_cover" = "Обложка плейлиста";
+"add_audio_verb" = "Добавить аудиозаписи";
 
 "minutes_count_zero" = "длится ноль минут";
 "minutes_count_one" = "длится одну минуту";
@@ -959,6 +959,7 @@
 "audio_ctx_add_to_group" = "Добавить в группу";
 "audio_ctx_add_to_playlist" = "Добавить в плейлист";
 "audio_ctx_play_next" = "Воспроизвести следующим";
+"audio_ctx_clear_context" = "Очистить список треков";
 
 /* Notifications */
 
@@ -1505,6 +1506,7 @@
 "error_adding_source_regex" = "Ошибка добавления источника: некорректная ссылка.";
 "error_adding_source_long" = "Ошибка добавления источника: слишком длинная ссылка.";
 "error_adding_source_sus" = "Ошибка добавления источника: гиперссылка заблокирована.";
+"error_playlist_creating_too_small" = "Добавь хотя бы одну аудиозапись.";
 
 /* Admin actions */
 
