--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1719,6 +1719,21 @@
 "user_blacklisted" = "$1 занесён в чёрный список.";
 "user_removed_from_the_blacklist" = "$1 удалён из чёрного списка.";
 
+"adding_to_bl_sure" = "Вы уверены, что хотите внести $1 в чёрный список?";
+
+"bl_count_zero_desc" = "В вашем чёрном списке ещё нет пользователей.";
+"bl_count_zero" = "В вашем чёрном списке нет пользователей";
+"bl_count_one" = "В вашем чёрном списке один пользователь";
+"bl_count_few" = "В вашем чёрном списке $1 пользователя";
+"bl_count_many" = "В вашем чёрном списке $1 пользователей";
+"bl_count_other" = "В вашем чёрном списке $1 пользователей";
+
+"you_blacklisted" = "Вы внесли $1 в чёрный список";
+"bl_add" = "Добавить в чёрный список";
+"bl_remove" = "Удалить из чёрного списка";
+
+"addition_to_bl" = "Добавление в чёрный список";
+
 /* Away */
 
 "transition_is_blocked" = "Переход по ссылке заблокирован";
