--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1065,6 +1065,8 @@
 "negative_rating_value" = "Мы не можем украсть рейтинг у другого человека, извините.";
 "increased_your_rating_by" = "повысил ваш рейтинг на";
 
+"news" = "Новость";
+
 /* Gifts */
 
 "gift" = "Подарок";
