--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1015,6 +1015,7 @@
 "on_your_account" = "на вашем счету";
 "top_up_your_account" = "Пополнить баланс";
 "you_still_have_x_points" = "У Вас <b>$1</b> неиспользованных голосов.";
+"news_more" = "Подробнее";
 "vouchers" = "Ваучеры";
 "have_voucher" = "Есть ваучер";
 "voucher_token" = "Код ваучера";
